--- a/example/SMF_S_Winter_Wheat.ipynb
+++ b/example/SMF_S_Winter_Wheat.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<img align=\"left\" style=\"padding-right:10px;\" src=\"https://cdn.goodq.top/caches/48c09dcfe95563ebd378e68c00243624/aHR0cDovL3d3dy5jaGVuLWxhYi5jbHViL3FmeS1jb250ZW50L3VwbG9hZHMvMjAxOS8wNC85MGM3MmVkNDVjNjYzZjI2NjYxN2Y4MmI4YzY0M2M4My5wbmc_p_p100_p_3D.png\" width=5%>\n",
     "\n",
-    "*All data and algorithms in the notebook, and their updates can be obtained by visiting the following website：[chen-lab](http://www.chen-lab.club/)*"
+    "*All data and algorithms in the notebook, and their updates can be obtained by visiting the following website：[SMF_S_Release](https://github.com/LicongLiu/SMF_S_Release)*"
    ]
   },
   {
@@ -805,11 +805,9 @@
    "id": "cfac0ef4",
    "metadata": {},
    "source": [
-    "Here, we use the SMFS algorithm to complete the phenology extraction of the entire area. We also learned how to change the window size to deal with noise. But the current window is empirical.\n",
+    "Here, we use the SMFS algorithm to complete the phenology extraction of the entire area. We also learned how to change the window size to deal with noise.\n",
     "\n",
-    "What if we want to determine window more accurately rather than empirically?\n",
-    "\n",
-    "We'll show this in detail in another notebook."
+    "However, the window size 75 is empirically determined. In the next notebook (SMFS_S_Windows.ipynb), we provided a full demonstration of building a window size look-up table based on the noise level. [We are preparing it and will publish it soon]"
    ]
   }
  ],
