--- a/example/SMF_S_Winter_Wheat.ipynb
+++ b/example/SMF_S_Winter_Wheat.ipynb
@@ -807,7 +807,7 @@
    "source": [
     "Here, we use the SMFS algorithm to complete the phenology extraction of the entire area. We also learned how to change the window size to deal with noise.\n",
     "\n",
-    "However, the window size 75 is empirically determined. In the next notebook (SMFS_S_Windows.ipynb), we provided a full demonstration of building a window size look-up table based on the noise level. [We are preparing it and will publish it soon]"
+    "However, the window size 75 is empirically determined. In the next notebook (SMF_S_Windows.ipynb), we provided a full demonstration of building a window size look-up table based on the noise level. [We are preparing it and will publish it soon]"
    ]
   }
  ],
